--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.13.1
+Babel==2.14.0
 black==23.12.1
 blinker==1.7.0
 cfgv==3.4.0
@@ -11,9 +12,13 @@ email-validator==2.1.0.post1
 filelock==3.13.1
 Flask==3.0.0
 Flask-Admin==1.6.1
+Flask-BabelEx==0.9.4
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
@@ -27,12 +32,14 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 packaging==23.2
+passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.1.0
 pre-commit==3.6.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
 PyYAML==6.0.1
+speaklater==1.3
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
 virtualenv==20.25.0
